jilles      2006/10/06 14:22:19 UTC	(20061006-6673)
  Log:
  Fix crash.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/set.c (File Modified) 


jilles      2006/10/06 00:13:15 UTC	(20061006-6669)
  Log:
  Add const char *sourcedesc field to sourceinfo_t to
  put the sourceip parameter to atheme.command.
  /os testcmd also puts a meaningful value there.
  

  Changes:	Modified:
  +4 -0		trunk/contrib/os_testcmd.c (File Modified) 
  +3 -2		trunk/contrib/perlxmlrpc.pl (File Modified) 
  +1 -0		trunk/include/sourceinfo.h (File Modified) 
  +1 -1		trunk/modules/xmlrpc/main.c (File Modified) 
  +1 -1		trunk/src/function.c (File Modified) 


jilles      2006/10/05 23:46:42 UTC	(20061005-6667)
  Log:
  perlxmlrpc.pl:
  Pass some value for the 'source ip' atheme.login parameter.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/perlxmlrpc.pl (File Modified) 


jilles      2006/10/05 23:45:09 UTC	(20061005-6665)
  Log:
  Add an extra parameter to logcommand_external() for a
  source IP address or similar. Format of the log entries
  changed to contain both direct source and this new field.
  atheme.login has an optional parameter to use for this field.
  

  Changes:	Modified:
  +1 -1		trunk/include/tools.h (File Modified) 
  +11 -11	trunk/modules/xmlrpc/account.c (File Modified) 
  +7 -7		trunk/modules/xmlrpc/channel.c (File Modified) 
  +8 -5		trunk/modules/xmlrpc/main.c (File Modified) 
  +4 -4		trunk/modules/xmlrpc/memo.c (File Modified) 
  +4 -3		trunk/src/function.c (File Modified) 


jilles      2006/10/04 23:43:58 UTC	(20061004-6663)
  Log:
  Change /cs set to use command_t, much like /ns set and /cs clear.
  

  Changes:	Modified:
  +0 -36	trunk/modules/chanserv/help.c (File Modified) 
  +279 -344	trunk/modules/chanserv/set.c (File Modified) 


jilles      2006/10/04 23:41:37 UTC	(20061004-6661)
  Log:
  Respect general::secure in /cs help clear output.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/clear.c (File Modified) 

